--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: any
   google_fonts: 2.2.0
-  font_awesome_flutter: any
-  otp_text_field: any
-  bottom_navy_bar: any
+  font_awesome_flutter: ^9.2.0
+  otp_text_field: ^1.1.2
+  get: ^4.6.1
+  bottom_navy_bar: ^6.0.0
   carousel_slider: ^4.0.0-nullsafety.0
+  http: ^0.13.4
+  video_player: ^2.3.0
+  firebase_auth: ^3.3.10
+  firebase_core: ^1.13.1
+  google_sign_in: ^5.2.4
+  velocity_x: ^3.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -50,9 +60,15 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_native_splash: ^2.1.1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_native_splash:
+  color: "#000000"
+  image: assets/launch_image.png
 
 # The following section is specific to Flutter.
 flutter:
@@ -64,16 +80,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/deals3.jpg
-    - assets/deals1.jpg
-    - assets/deals2.jpg
-    - assets/deals4.jpg
-    - assets/deals5.jpg
-    - assets/refer_and_earn.png
-    - assets/bargraph.png
-    - assets/home1.jpeg
-    - assets/home2.jpeg
-    - assets/home3.jpg
+    - assets/
 
 
   #   - images/a_dot_ham.jpeg
@@ -83,7 +90,6 @@ flutter:
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
